# qpmr

./: .buildinfo  .gitignore  MANIFEST.in  README.md  api_reference.html  citing.html  docstrings.html  genindex.html  index.html  installation.html  introduction.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  qpmr.core.html  qpmr.distribution.html  qpmr.html  qpmr.numerical_methods.html  qpmr.plot.html  qpmr.quasipoly.html  requirements.txt  search.html  searchindex.js  sg_execution_times.html
.doctrees/: api_reference.doctree  citing.doctree  docstrings.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree  modules.doctree  qpmr.core.doctree  qpmr.distribution.doctree  qpmr.doctree  qpmr.numerical_methods.doctree  qpmr.plot.doctree  qpmr.quasipoly.doctree  sg_execution_times.doctree
.doctrees/auto_examples/: example01.doctree  index.doctree  sg_execution_times.doctree
.github/workflows/: documentation.yml
_downloads/468b281b5651b0045c2cb98b77733565/: example01.py
_downloads/4aa3f1537e0a05b54412696fa5e48d93/: example02.ipynb
_downloads/792e8912a8cbed3071fefc9ce87881c3/: example01.ipynb
_downloads/e3ffccb39a4073f083cbfe710059b9d6/: example02.py
_sources/: api_reference.rst.txt  citing.rst.txt  docstrings.rst.txt  introduction.rst.txt  qpmr.distribution.rst.txt  qpmr.numerical_methods.rst.txt  qpmr.plot.rst.txt  qpmr.quasipoly.rst.txt  qpmr.rst.txt
_sources/auto_examples/: index.rst.txt
auto_examples/: example01.html  index.html  sg_execution_times.html
docs/: README.md  creating_distribution_locally.md  requirements.txt  roadmap.md
examples/: GALLERY_HEADER.rst  README.rst  contour.eps  example01.py  example02.py  example02_chains.py  example02_mapping_algorithm.py  example03.py  example04.py  example05.py  example06_neutral.py  example10_basicplots.py  example10_can.py  example11_.py  example12_real_zeros.py  example20_performance.py  example30_fractional.py  example41_multiplicity.py  example42_multiplicity.py  example43_multiplicity.py  example_12_MID.py  example_can.py  example_envelope.ipynb  example_problem01.py  example_problem02.py  example_shaper.ipynb  example_shaper_ZV.ipynb  example_v3_yuksel.py  melnik2024.ipynb  newton_mapping.ipynb  test.ipynb  test.py  test01.py  test02.py  test03.py  test04.py  test_3dplots.py  test_distribution_diagram.py  wip_region_heuristic.py  wip_region_heuristic2.py  (+3 more)
notes/: article_mazanti2021multiplicity.py  creating_distribution_locally.md  example01v3.py  example04.py  example06_neutral.py  example12_real_zeros.py  example40_multiplicity.py  example41_multiplicity.py  example50_newton_mapping.py  example_envelope.ipynb  example_problem01.py  example_problem02.py  example_shaper_ZV.ipynb  roadmap.md  test.ipynb  test_distribution_diagram.py
src/: test01.py  test02.py  test03.py
test/: conftest.py  requirements.txt  test_qp.py
tests/: README.md  conftest.py  test_all.py  test_argument_principle.py  test_article.py  test_qp.py  test_qp_operations.py  test_qpmr.py  test_qpmrv3.py  test_region_heuristic.py
(+113 files in other folders)
