[project]
name = "qpmr"
version = "0.0.1"
requires-python = ">= 3.8"
dependencies = [
    "numpy",
]
description = "Quassi polynomial root finder"
authors = [
	{name = "Adam Peichl", email = "adpeichl@gmail.com"}
]
maintainers = [
    { name ="Adam Peichl", email = "adpeichl@gmail.com" }
]

# TODO add classifiers

readme = {file = "README.txt", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["timedelay", "control", "stability", "DDE"]

[project.urls]
Homepage = "https://github.com/LockeErasmus/qpmr"
Repository = "https://github.com/LockeErasmus/qpmr"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"