[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qpmr"
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "numpy>=1.24.2",
    "contourpy>=1.0.0",
]
description = "Quassi polynomial root finder"
authors = [
	{name = "Adam Peichl", email = "adpeichl@gmail.com"}
]
maintainers = [
    { name ="Adam Peichl", email = "adpeichl@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]

readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["timedelay", "control", "stability", "DDE"]

[project.optional-dependencies]
plot = ["matplotlib"]

[project.urls]
Homepage = "https://github.com/LockeErasmus/qpmr"
Repository = "https://github.com/LockeErasmus/qpmr"

[tool.setuptools.packages.find]
where = ["./src"]
include = ["qpmr*"]

[tool.setuptools.dynamic]
version = {attr = "qpmr.__version__"}